networkpolicy/networkpolicy__basic_kafka_setup__mongodb__from__prometheus__ingress__ports__27017__nr42__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb--from--prometheus--ingress--ports--27017--nr42
  namespace: mongodb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: prometheus
    ports:
    - protocol: TCP
      port: 27017
